--- a/src/front/styles/home.css
+++ b/src/front/styles/home.css
@@ -5,3 +5,52 @@
     one more css for each page that will contain the selected used 
     on that page only (the ones not reused in other pages).
 */
+
+.myclass {
+    margin-top: 20px; /* Ajusta el margen superior según sea necesario */
+    /* Otros estilos que ya tengas */
+}
+.login-container {
+    width: 300px;
+    margin: 0 auto;
+    background: white;
+    border-radius: 10px;
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+    margin-top: 60px;
+}
+
+.login-tabs {
+    display: flex;
+    justify-content: space-around;
+    padding: 10px;
+    background-color: #f5f5f5;
+    border-bottom: 1px solid #ddd;
+    border-radius: 10px 10px 0 0;
+}
+
+.login-tab {
+    flex: 1;
+    text-align: center;
+    padding: 20px;
+    cursor: pointer;
+    font-weight: bold;
+    color: #888;
+}
+
+.login-tab.active {
+    background-color: #050404;
+    color: white;
+    border-bottom: 2px solid #f5f5f5;
+}
+
+.login-form {
+    padding: 20px;
+}
+.mybutton{
+    background-color: #050404;
+    color: #EAEAEA;
+}
+.mybutton:hover {
+    background-color: #2e1c2b;
+    color: #EAEAEA;
+}
