--- a/src/front/styles/index.css
+++ b/src/front/styles/index.css
@@ -1,3 +1,13 @@
 /* 
     General Styles used on every website (Don't Repeat Yourself)
 */
+.mylogo{
+    color: #050404;
+    padding: 10px;
+}
+.myconditions{
+    font-size: 12px;
+}
+.mycheckbox{
+    color:#050404;
+}
